array of objects assignment completed